# ModelForge

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
engine/: __init__.py  datasets.py  executor.py  reward.py  trainer.py
server/: Dockerfile  __init__.py  app.py  modelforge_environment.py
training/: AutoLearn_SUBMIT.ipynb
