# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-modelforge"
version = "0.1.0"
description = "Modelforge environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m modelforge.server.app
server = "modelforge.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["modelforge", "modelforge.server", "modelforge.engine"]
package-dir = { "modelforge" = ".", "modelforge.server" = "server", "modelforge.engine" = "engine" }